# Blur-AutoClicker

./: .gitignore  CHANGELOG.md  CLAUDE.md  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
diag-click/: Cargo.toml
diag-click/src/: main.rs
src/: App.tsx  cadence.ts  changelog.ts  hotkeys.ts  main.tsx  settingsSchema.ts  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  hotkeys.rs  lib.rs  overlay.rs  ui_commands.rs  window_lifecycle.rs
src-tauri/src/engine/: failsafe.rs  keyboard.rs  mod.rs  mouse.rs  process.rs  stop_reason.rs  worker.rs
src-tauri/src/settings/: mod.rs
src/__tests__/: hotkeys.test.ts
src/components/: CadenceInput.tsx  ChangelogContent.css  ChangelogContent.tsx  ConfirmDialog.tsx  HotkeyCaptureInput.tsx  KeyCaptureInput.tsx  TitleBar.tsx  Updatebanner.tsx
src/components/__tests__/: TitleBar.stopReason.test.tsx
src/components/panels/: SettingsPanel.css  SettingsPanel.tsx  SimplePanel.tsx
src/components/panels/advanced/: AdvancedPanel.tsx  CadenceSection.tsx  DoubleClickSection.tsx  DutyCycleSection.tsx  LimitsSection.tsx  (+3 more)
src/i18n/: hotkeyLabels.ts  index.ts
src/i18n/__tests__/: i18n.test.ts
src/locales/: ar.json  de.json  en.json  es.json  fr.json  he.json
src/locales/en/: advanced.json  common.json  hotkeys.json  log.json  overlay.json  settings.json  stopReason.json  zones.json
src/locales/zh/: advanced.json  common.json  hotkeys.json  log.json  overlay.json  settings.json  stopReason.json  zones.json
src/overlay/: i18n.ts
src/test/: setup.ts
(+6 files in other folders)
