[package]
name = "click-diag"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "click-diag"
path = "src/main.rs"

[dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
